--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "core-js": "^2.5.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-password-strength": "^2.3.1",
     "react-radio-group": "^3.0.2",
     "react-scripts": "1.1.1",
     "react-select": "^1.2.1"
