--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.2.0",
     "react-password-strength": "^2.3.1",
     "react-radio-group": "^3.0.2",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.1",
     "react-select": "^1.2.1"
   },
