--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "homepage": "/wp-content/themes/business-pro-theme/assets/scripts/foxselect/",
   "dependencies": {
     "axios": "^0.18.0",
-    "core-js": "^2.5.6",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "core-js": "^2.6.5",
+    "react": "^16.8.3",
+    "react-datepicker": "^2.1.0",
+    "react-dom": "^16.8.3",
     "react-password-strength": "^2.3.1",
     "react-radio-group": "^3.0.2",
     "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.1",
-    "react-select": "^1.2.1"
+    "react-select": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
