--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "/wp-content/themes/business-pro-theme/assets/scripts/foxselect/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "react": "^16.8.3",
@@ -13,9 +16,11 @@
     "react-radio-group": "^3.0.2",
     "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.1",
-    "react-select": "^2.4.0"
+    "react-select": "^2.4.0",
+    "source-map-explorer": "^1.8.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
