--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.3",
@@ -26,5 +25,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "peerDependencies": {}
 }
