Adding REACT_APP_WPAPI_EP env var

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@
 
 REACT_APP_API_USER=exampleuser
 REACT_APP_API_PASS=eXamPlePAssworD
+
+# WordPress API Bridge Endpoint
+REACT_APP_WPAPI_EP=http://www.example-wordpress.com
