--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.18.0",
-    "core-js": "^2.6.5",
+    "axios": "^0.19.0",
+    "core-js": "^3.6.2",
+    "npm-check-updates": "^4.0.1",
     "react": "^16.8.3",
     "react-datepicker": "^2.1.0",
-    "react-devtools": "^3.6.1",
+    "react-devtools": "^4.4.0",
     "react-dom": "^16.8.3",
     "react-ga": "^2.5.7",
     "react-password-strength": "^2.3.1",
     "react-radio-group": "^3.0.2",
     "react-s-alert": "^1.4.1",
-    "react-scripts": "1.1.1",
-    "react-select": "^2.4.0",
-    "source-map-explorer": "^1.8.0"
+    "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
+    "source-map-explorer": "^2.2.1"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -28,5 +29,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
