Adding `INLINE_RUNTIME_CHUNK=false` to allow for loading FoxSelect in WP modal

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 #
 # Add a `.env.production` with these variables for production builds
 # of this app (i.e. `yarn build`).
+INLINE_RUNTIME_CHUNK=false
 
 REACT_APP_API_USER=exampleuser
 REACT_APP_API_PASS=eXamPlePAssworD
