--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "core-js": "^3.6.2",
+    "env-cmd": "^10.1.0",
     "npm-check-updates": "^4.0.1",
     "react": "^16.8.3",
     "react-datepicker": "^2.1.0",
@@ -26,6 +27,7 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:staging": "env-cmd -f .env.staging react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
